--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">SharkCatShop</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="stickers">
+        <item>我全都要</item>
+        <item>我愛鯊鯊</item>
+        <item>我愛喵喵</item>
+    </string-array>
+
 </resources>
